rewrite to netty